--- a/Assets/Composer/05.UI/GridBackground.uss
+++ b/Assets/Composer/05.UI/GridBackground.uss
@@ -52,6 +52,20 @@
     margin-bottom: 8px;
     -unity-font-style: bold;
     font-size: 14px;
+    color: rgb(220, 220, 220);
+}
+
+/* 노드 프리뷰 */
+.node__preview {
+    width: 120px;
+    height: 120px;
+    background-color: rgb(30, 30, 30);
+    border-width: 1px;
+    border-color: rgb(60, 60, 60);
+    border-radius: 4px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    align-self: center;
 }
 
 /* 슬롯 컨테이너 */
