--- a/Assets/Composer/05.UI/NodeInspector.uss
+++ b/Assets/Composer/05.UI/NodeInspector.uss
@@ -9,9 +9,10 @@
 /* 헤더 */
 .inspector__header {
     background-color: rgb(50, 50, 50);
-    padding: 12px;
+    padding: 14px;
+    padding-left: 28px;
     border-bottom-width: 2px;
-    border-bottom-color: rgb(100, 150, 255);
+    border-bottom-color: rgba(88, 92, 101, 1);
 }
 
 .inspector__title {
@@ -20,9 +21,39 @@
     -unity-font-style: bold;
 }
 
+/* 스크롤 뷰 */
+.inspector__scroll-view {
+    background-color: rgb(40, 40, 40);
+}
+
+.inspector__scroll-view .unity-scroller--vertical {
+    width: 12px;
+}
+
+.inspector__scroll-view .unity-scroller__slider {
+    background-color: transparent;
+}
+
+.inspector__scroll-view .unity-base-slider__tracker {
+    background-color: rgb(50, 50, 50);
+    border-radius: 6px;
+    margin: 2px;
+}
+
+.inspector__scroll-view .unity-base-slider__dragger {
+    background-color: rgb(80, 80, 80);
+    border-radius: 6px;
+    border-width: 0;
+}
+
+.inspector__scroll-view .unity-base-slider__dragger:hover {
+    background-color: rgb(100, 100, 100);
+}
+
 /* 프로퍼티 컨테이너 */
 .inspector__properties-container {
-    padding: 12px;
+    padding: 14px;
+    padding-left: 20px;
     background-color: rgb(40, 40, 40);
 }
 
@@ -67,6 +98,22 @@
     color: rgb(255, 255, 255);
     font-size: 12px;
     min-width: 80px;
+}
+
+/* 드래그 가능한 라벨 */
+.inspector__label-draggable {
+    cursor: slide-arrow;
+    transition-duration: 0.1s;
+}
+
+.inspector__label-draggable:hover {
+    color: rgb(100, 150, 255);
+}
+
+.inspector__label-dragging {
+    color: rgb(255, 200, 60);
+    background-color: rgba(255, 200, 60, 0.1);
+    border-radius: 3px;
 }
 
 .inspector__field .unity-base-field__input {
