fix: timeline ruler and playhead alignment with padding
Adjusted CSS for .timeline-ruler and .timeline-tracks to use negative margins and padding for proper alignment. Updated TimelineView.cs to correctly calculate mouse positions and playhead placement by accounting for the ruler's padding, ensuring accurate interaction and display.

--- a/Assets/Composer/05.UI/GridBackground.uss
+++ b/Assets/Composer/05.UI/GridBackground.uss
@@ -259,11 +259,19 @@
 .timeline-ruler {
     height: 30px;
     background-color: rgb(64, 64, 64);
+    margin-left: -16px;
+    margin-right: -16px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .timeline-tracks {
     flex-grow: 1;
     background-color: rgb(46, 46, 46);
+    margin-left: -16px;
+    margin-right: -16px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .timeline-playhead {
