--- a/Assets/Composer/05.UI/GridBackground.uss
+++ b/Assets/Composer/05.UI/GridBackground.uss
@@ -282,3 +282,86 @@
     height: 100%;
     background-color: rgb(255, 77, 77);
 }
+
+/* === Recent Projects Dialog === */
+.recent-dialog-button {
+    min-width: 100px;
+    height: 35px;
+    border-radius: 4px;
+    border-width: 2px;
+    font-size: 13px;
+    -unity-font-style: bold;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.recent-dialog-button--primary {
+    background-color: rgb(60, 120, 200);
+    border-color: rgb(80, 140, 220);
+    color: rgb(255, 255, 255);
+}
+
+.recent-dialog-button--primary:hover {
+    background-color: rgb(80, 140, 220);
+    border-color: rgb(100, 160, 240);
+}
+
+.recent-dialog-button--primary:active {
+    background-color: rgb(50, 110, 180);
+}
+
+.recent-dialog-button--cancel {
+    background-color: rgb(70, 70, 70);
+    border-color: rgb(90, 90, 90);
+    color: rgb(220, 220, 220);
+}
+
+.recent-dialog-button--cancel:hover {
+    background-color: rgb(90, 90, 90);
+    border-color: rgb(110, 110, 110);
+}
+
+.recent-dialog-button--cancel:active {
+    background-color: rgb(60, 60, 60);
+}
+
+.recent-project-item {
+    height: 40px;
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 4px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: rgb(64, 64, 64);
+    border-width: 1px;
+    border-color: rgb(102, 102, 102);
+    border-radius: 4px;
+    align-items: flex-start;
+    -unity-text-align: middle-left;
+}
+
+.recent-project-item:hover {
+    background-color: rgb(90, 128, 179);
+    border-color: rgb(100, 160, 240);
+}
+
+.recent-project-item:active {
+    background-color: rgb(70, 108, 159);
+}
+
+.recent-project-item__container {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.recent-project-item__name {
+    color: rgb(255, 255, 255);
+    font-size: 13px;
+    -unity-font-style: bold;
+}
+
+.recent-project-item__time {
+    color: rgb(153, 153, 153);
+    font-size: 11px;
+}
